--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /* GOOGLE FONTS */
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Lora&display=swap");
@@ -14,8 +13,16 @@ html {
   font-size: 1em;
 }
 
-.imgRedonda {
-  border-radius: 50%;
+h1 {
+  font-family: "Lora", serif;
+}
+
+h2 {
+  font-family: "Montserrat", sans-serif;
+}
+
+p {
+  font-family: "Lora", serif;
 }
 
 li {
@@ -26,30 +33,15 @@ li {
   background-color: #FBEDED;
 }
 
+main {
+  margin-top: 6em;
+}
+
 /* BOTON SUBIR PAGINAS */
-.subir {
-  height: 30px;
-  width: auto;
-  color: #FBEDED;
-  background-color: #405944;
-  border-radius: 50%;
-  padding: 5px;
-  position: fixed;
-  bottom: 75px;
-  right: 40px;
-  text-align: center;
-  line-height: 40px;
-}
-
-.subir:hover {
-  transform: scale(1.3);
-  transition: 0.5s;
-}
-
 /* CSS PARA INICIO */
 #inicioFondo {
   background-color: #FBEDED;
-  background-image: url(../assets/bebe-frambuesas.jpg);
+  background-image: url(../assets/inicio/bebe-frambuesas.jpg);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -64,12 +56,25 @@ li {
 }
 
 .inicioMain {
-  /* background-color: #405944b2; */
   width: fit-content;
   margin-top: 70px;
   padding-block: 20px;
   padding-inline: 60px;
   border-radius: 15px;
+}
+.inicioMain img {
+  height: 10em;
+  width: auto;
+  margin-bottom: 1em;
+  border-radius: 50%;
+  filter: drop-shadow(3px 3px 20px #405944);
+}
+.inicioMain h1 {
+  font-size: 3em;
+}
+.inicioMain h2 {
+  font-size: 2em;
+  font-weight: bold;
 }
 
 .inicioLi {
@@ -77,42 +82,30 @@ li {
   width: 7em;
   text-align: center;
   margin: 5px;
-  padding-inline: 20px;
   border-radius: 5px;
-}
-
-.imgInicio {
-  height: 10em;
-  width: auto;
-  margin-bottom: 1em;
 }
 
 nav ul li a {
   list-style-type: none;
   text-decoration: none;
   color: #405944;
-  /* font-family: 'Courier New', Courier, monospace;  */
+  font-family: "Montserrat", sans-serif;
+  text-transform: uppercase;
 }
 
 /* CSS BARRA DE NAVEGACION PAGINAS */
-#colorHeader {
+#pagHeader {
   background-color: #55735F;
-}
-
-.stickyHeader {
-  position: sticky;
-  top: 0;
   display: flex;
   justify-content: space-between;
 }
-
-.imgHeader {
+#pagHeader img {
   height: 5em;
   width: auto;
   margin: 0.4em;
+  border-radius: 50%;
 }
-
-.paginasLi {
+#pagHeader nav ul li {
   margin-inline: 0.5em;
 }
 
@@ -123,6 +116,9 @@ nav ul li a {
   display: flex;
   justify-content: space-between;
   padding: 20px;
+}
+#footer aside p {
+  color: #405944;
 }
 #footer div {
   display: inline-block;
@@ -141,6 +137,9 @@ nav ul li a {
   justify-content: space-between;
   padding: 20px;
 }
+.footer aside p {
+  color: #405944;
+}
 .footer div {
   display: inline-block;
 }
@@ -150,27 +149,69 @@ nav ul li a {
 }
 
 /* CSS EQUIPO */
-.imgTamaño {
-  height: 20em;
-  width: auto;
+.quienesSomos {
+  padding-block: 15px;
+  margin-block: 15px;
+}
+.quienesSomos h1 {
+  text-align: center;
+  margin-bottom: 20px;
+}
+.quienesSomos p {
+  font-size: 1.2em;
 }
 
-/* con flexbox */
+.conocenos {
+  padding-block: 15px;
+  margin-block: 15px;
+}
+.conocenos h2 {
+  margin-bottom: 20px;
+}
+
 .perfiles {
   display: flex;
+  flex-direction: column;
 }
-
-.perfil {
+.perfiles article {
   margin: 1em;
   padding: 1em;
   text-align: center;
-  background-color: #C5B9AF;
-  border-radius: 2%;
+  background-color: #FBEDED;
+  box-shadow: 0 0 10px #C5B9AF;
+  border-radius: 20px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.perfiles article img {
+  height: 20em;
+  width: auto;
+  border-radius: 50%;
 }
 
 /* CSS SERVICIOS */
-.bordesRedondeados {
-  border-radius: 12%;
+.servicios {
+  padding-block: 15px;
+  margin-block: 15px;
+}
+.servicios h1 {
+  text-align: center;
+  margin-bottom: 20px;
+}
+.servicios p {
+  font-size: 1.2em;
+}
+
+.serviciosCarosuel {
+  margin-block: 5em;
+  box-shadow: 0 0 10px #C5B9AF;
+}
+.serviciosCarosuel h3 {
+  font-family: "Montserrat", sans-serif;
+  background-color: rgba(64, 89, 68, 0.631372549);
+  border-radius: 5px;
+  font-size: 1.5em;
 }
 
 .agendaTurno {
@@ -179,7 +220,8 @@ nav ul li a {
   margin: 2em;
   background-color: #405944;
   color: #FBEDED;
-  border-radius: 5%;
+  border-radius: 5px;
+  box-shadow: 0 0 10px #C5B9AF;
 }
 
 .agendaTurno:hover {
@@ -189,6 +231,69 @@ nav ul li a {
 }
 
 /* CSS ARTICULOS */
+.articulos {
+  padding-block: 15px;
+  margin-block: 15px;
+}
+.articulos h1 {
+  text-align: center;
+  margin-bottom: 20px;
+}
+.articulos p {
+  font-size: 1.2em;
+}
+
+.artSecciones {
+  margin-block: 2em;
+  padding: 1em;
+}
+.artSecciones h2 {
+  padding-bottom: 0.5em;
+}
+.artSecciones p {
+  padding-bottom: 0.5em;
+}
+.artSecciones .card {
+  width: 300px;
+  height: auto;
+  margin: 1em;
+}
+
 /* CSS CONTACTO */
+.contactanos {
+  padding-block: 15px;
+  margin-block: 15px;
+}
+
+.contSecciones {
+  margin-block: 1.5em;
+}
+.contSecciones h2 {
+  padding-bottom: 0.5em;
+}
+.contSecciones p {
+  padding-bottom: 0.5em;
+}
+.contSecciones .rrssContacto {
+  margin-block: 2em;
+  margin-left: 6em;
+  font-family: "Lora", serif;
+}
+
+.btnContacto {
+  border: none;
+  padding-block: 0.5em;
+  padding-inline: 2em;
+  background-color: #405944;
+  color: #FBEDED;
+  border-radius: 5px;
+  box-shadow: 0 0 10px #C5B9AF;
+}
+
+.btnContacto:hover {
+  background-color: #55735F;
+  color: #FBEDED;
+  text-decoration: none;
+}
 
 /*# sourceMappingURL=style.css.map */
